# Arquivos-Python

./: README.md  frequencia_palavra.py  main.py  pyproject.toml  teste.py
