[tool.poetry]
name = "poetry-python"
version = "0.1.0"
description = ""
authors = ["Jose Guilherme Fernandes"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
